...
            android:id="@+id/profileCreationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a Tox profile"
            android:textSize="25sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
...
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="Password (optional)"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintBottom_toTopOf="@id/btnCreate"/>

    <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create"
...
