...
    <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_photo_description"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintBottom_toTopOf="@id/profileName"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
...
